# bril

./: .gitignore
.github/workflows/: build.yaml  rust.yaml
asmm/: Cargo.toml  Makefile
asmm/benchmarks/: eight-queens.bril.asmm  mat-mul.bril.asmm  turnt.toml
asmm/src/: cfg.rs  dominator.rs  free.rs  infer.rs  lib.rs  main.rs  removal.rs  worklist.rs
benchmarks/long/: access-many.prof  alloc-large.prof
bril-rs/: Cargo.toml  Makefile  README.md  Task4.md  Task5.md  Task7.md  file.json
bril-rs/benchmarks/: turnt.toml
bril-rs/bril-sitter/: .gitignore  Cargo.toml  build.rs  output.rs  test.bril
bril-rs/bril-sitter/src/: from.rs  grammar.rs  lib.rs  main.rs
bril-rs/bril2json/: .gitignore  Cargo.toml  build.rs
bril-rs/bril2json/src/: bril_grammar.lalrpop  cli.rs  grammar.lalrpop  lib.rs  with_imports.lalrpop  without_imports.lalrpop
bril-rs/brild/: Cargo.toml
bril-rs/brilgen/: Cargo.toml
bril-rs/brilgen/src/: lib.rs
bril-rs/brilinfer/: Cargo.toml
bril-rs/brilinfer/src/: main.rs
bril-rs/brillvm/: Cargo.toml  Makefile  README.md
bril-rs/brillvm/runtime/: Cargo.toml
bril-rs/brillvm/runtime/libc_print-dynamic/: Cargo.toml
bril-rs/brillvm/runtime/libc_print-dynamic/src/: lib.rs
bril-rs/brillvm/runtime/src/: lib.rs
bril-rs/brilm/: Cargo.toml  Makefile  README.md  build.rs  program.json
bril-rs/brilm/dialect/: BrilDialect.h  BrilOps.h  BrilOpsImpl.cpp  BrilTypes.h
bril-rs/brilm/src/: main.rs  main_wrapper.rs  translator.rs
bril-rs/brilwf/: Cargo.toml
bril-rs/brilwf/src/: check.rs  error.rs  infer.rs  lib.rs
bril-rs/dbril/: Cargo.toml  ReadMe.md
bril-rs/dbril/src/: lib.rs
bril-rs/examples/bril2json/: bril.l  bril.y  build.rs  cargo.toml
bril-rs/examples/bril2txt/: Cargo.toml
bril-rs/rs2bril/src/: lib.rs
bril-rs/src/: abstract_program.rs  cfg.rs  conversion.rs  dce.rs  dom.rs  dominator.rs  helper.rs  lib.rs  licm.rs  lvn.rs  main.rs  positional.rs  program.rs  reaching_defs.rs  ssa.rs  types.rs  worklist.rs
bril-rs/test/floats/: turnt.toml
bril-rs/test/interp/: alloc.json  br.bril  bril.json  bril2.json  turnt.toml
bril-rs/test/lvn/: clobber.out  idchain-nonlocal.out  idchain.out  nonlocal.out  reassign.out  turnt.toml
bril-rs/test/pointers/: turnt.toml
bril-rs/test/tdce/: combo.out  diamond.out  double.out  skipped.out  turnt.toml
bril-rs/tree-sitter-bril/: Cargo.toml  README  binding.gyp  package.json  test.html
bril-rs/tree-sitter-bril/bindings/node/: binding.cc  index.js
bril-rs/tree-sitter-bril/bindings/rust/: lib.rs
bril-rs/tree-sitter-bril/queries/: highlights.scm
bril-rs/tree-sitter-bril/src/: grammar.json  node-types.json  parser.c
brili-rs/: Cargo.toml  Makefile  task11.md
brili-rs/benchmarks/: turnt.toml
brili-rs/src/: interp.rs  lib.rs  main.rs
brili-rs/test/interp/: turnt.toml
brilift/: Cargo.toml
brilir/: CMakeLists.txt
brilir/bril-opt/: CMakeLists.txt
brilir/bril2mlir/: CMakeLists.txt  bril2mlir.cpp
brilir/include/bril/: MLIR2Bril.h  MLIRGen.h
brilir/lib/bril/: BrilPasses.cpp  CMakeLists.txt  MLIR2Bril.cpp  MLIRGen.cpp
brilir/mlir2bril/: CMakeLists.txt  mlir2bril.cpp
brilirs/: .gitignore  Cargo.toml  Makefile  README.md  benchmark_compare.py  pgo.sh  todo_list.txt
brilirs/brilirs-fuzz/: Cargo.toml  Makefile
brilirs/brilirs-fuzz/in/: program1
brilirs/brilirs-fuzz/src/: main.rs
brilirs/src/: allocator.rs  basic_block.rs  basic_heap.rs  check.rs  cli.rs  error.rs  interp.rs  ir.rs  lib.rs  main.rs  mmtk.rs
brilirs/src/mmtk_bril/: active_plan.rs  api.rs  collection.rs  mod.rs  object_model.rs  reference_glue.rs  scanning.rs
docs/tools/: brilirs.md
test/check/: turnt.toml
test/interp/: turnt.toml
test/interp/dynamic/: mem_dynamic_dispatch.bril
test/parse/: turnt.toml
test/rs/: turnt.toml
