[package]
name = "asmm"
version = "0.1.0"
authors = ["Patrick LaFontaine <32135464+Pat-Lafon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"

[dependencies.bril-rs]
version = "0.1.0"
path = "../bril-rs"
features = ["memory", "float"]