[package]
name = "bril-rs"
version = "0.1.0"
authors = ["Patrick LaFontaine <32135464+Pat-Lafon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.19"
clap = "2.33"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
