[package]
name = "bril-rs"
version = "0.1.0"
authors = ["Patrick LaFontaine <32135464+Pat-Lafon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.19"
clap = "2.33"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
rustflags = ["-C target-cpu=native"]
# alternative allocators like jemallocator and mimalloc
# https://likebike.com/posts/How_To_Write_Fast_Rust_Code.html
# http://troubles.md/posts/rustfest-2018-workshop/
# https://doc.rust-lang.org/1.16.0/book/benchmark-tests.html
# https://deterministic.space/secret-life-of-cows.html
# https://github.com/flamegraph-rs/flamegraph#systems-performance-work-guided-by-flamegraphs
