[package]
name = "bril-rs"
version = "0.1.0"
authors = ["Patrick LaFontaine <32135464+Pat-Lafon@users.noreply.github.com>"]
edition = "2018"
license = "MIT"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[features]
float = []
memory = []
ssa = []
speculate = []
