[package]
name = "brilirs"
version = "0.1.0"
authors = ["Wil Thomason <wil.thomason@gmail.com>"]
edition = "2021"
description = "A fast interpreter for the Bril language written in Rust"
readme = "README.md"
repository = "https://github.com/sampsyo/bril"
# license = "MIT"
license-file = "../LICENSE"
categories = [
    "command-line-utilities",
    "compilers",
    "data-structures",
    "parser-implementations",
]
keywords = ["compiler", "bril", "interpreter", "data-structures", "language"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = { version = "4.5", optional = true }

[dependencies]
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
fxhash = "0.2"
mimalloc = "0.1"
itoa = "1.0"

[dependencies.bril-rs]
version = "0.1.0"
path = "../bril-rs"
features = ["memory", "position"]

[dependencies.bril2json]
version = "0.1.0"
path = "../bril-rs/bril2json"
features = ["memory"]

[profile.release]
# this can shave off a few ms but doubles the build time so it's not really worth it
# codegen-units = 1
lto = true
panic = "abort"

[features]
completions = ["clap_complete"]
char = ["bril-rs/char", "bril2json/char"]
ssa = ["bril-rs/ssa"]
float = ["bril-rs/float", "bril2json/float"]
