[package]
name = "bril2json"
version = "0.1.0"
authors = ["Patrick LaFontaine <32135464+Pat-Lafon@users.noreply.github.com>"]
edition = "2021"
description = "A rust parser of the Bril language text representation backed by tree-sitter"
readme = "README.md"
repository = "https://github.com/sampsyo/bril"
license-file = "../../LICENSE"
categories = ["command-line-utilities", "compilers", "parser-implementations"]
keywords = ["compiler", "bril", "parser", "data-structures", "language"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-sitter = "0.3.0"
clap        = { version = "4.1", features = ["derive"] }

[dependencies.bril-rs]
version = "0.1.0"
path = ".."
features = ["ssa", "memory", "float", "speculate", "position", "import"]

[build-dependencies]
rust-sitter-tool = "0.3.0"
