[package]
name = "brilinfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusttyc = "0.5.0"

[dependencies.bril-rs]
version = "0.1.0"
path = "../../bril-rs"
features = ["ssa", "memory", "float", "speculate", "position", "import"]
