[package]
name = "brilirs-fuzz"
version = "0.0.0"
authors = ["Patrick LaFontaine <32135464+Pat-Lafon@users.noreply.github.com>"]
edition = "2021"

[dependencies]
honggfuzz = "0.5"
arbitrary = "1.1"

[dependencies.brilirs]
path = ".."

[dependencies.bril-rs]
path = "../../bril-rs"
features = ["fuzzing"]

[[bin]]
name = "example"
path = "src/main.rs"
